傀儡界面 & 符文行为 完成